In frontend Tickets.jsx I updated imports, added useState var reqeustReload with default of true, added var reloadConditions set equal to token and requestReload, Reworked useEffect to monother new variable reloadConditions, added a div to wrap tickets table, deleted test zone, in return statment I added new component FilterTickets and passed props. + In DashBoard.js I added a div to wrap everything in the return except navbar, and added posted on date as well as moved the description. + In media folder I uploaded img algorithm.png. + Created new folder FilterTickets and created 4 files inside; FilterTickets.jsx, FilterTicketsByInputModal.jsx, FilterTicketsByDateModal.jsx, FilterTicketStyles.css. + In FilterTickets.jsx I added imports declared const FilterTickets set equal to arrow function, declared useState variable filterDateModalStatus with default state of false, Declared useState variable of filterInputModalStatus with default of false, Declared useState var of filterButtonName with set state of string for button, declared useState var of inputBoxPlaceHolder with state of string 'search', declared useState var of filterBy with set state of empty string, declared function handleReset which resets all data in the table and the search bar, Declared function handleInputClick which opens input modal and passes relevent data, declared function handleDateClick which opens Date modal and passes relevent information, added return statment that contains two conditional modals one for text input and one for date, also declared dropdown modal for when user hovers filter button. + In FilterTicketsByDate.jsx I added imports, declared function handleSearch which takes user selected date and looks for any matches and then sets table accordingly, declared handleSubmit function that prevents devault and calls previous function, declared return statment which contains a reset button, submit button, and a date input field. + In FilterTicketsByInputModal.jsx I added imports, decla

--- a/frontend/src/pages/DashBoard/DashBoardStyless.css
+++ b/frontend/src/pages/DashBoard/DashBoardStyless.css
@@ -5,10 +5,28 @@
 }
 
 .projects-container {
+  /* background-image: url("../../media/algorithm.png");
+  background-repeat: repeat-y;
+  background-position: center;
+  background-position: top;
+  background-size: contain;*/
   margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  min-width: 75%;
+  max-width: fit-content;
+}
+
+.background-img {
+  background-image: url("../../media/algorithm.png");
+  background-repeat: repeat-y;
+  background-position: center;
+  background-position: top;
+  background-size: contain;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
 }
 
 .phead {
@@ -36,9 +54,10 @@
 
 .project-link {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
   min-width: 380px;
-  background-color: rgb(139, 139, 139);
+  background-color: rgba(139, 139, 139, 0.925);
   margin: 0.4rem;
   margin-bottom: 1rem;
   border-radius: 10px;
@@ -52,4 +71,88 @@
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(170, 192, 219);
+}
+
+.project-link-head {
+  width: 100%;
+  display: grid;
+  grid-template-areas: "top-l div1 top-m div2 top-r";
+  align-content: space-evenly;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.head-left {
+  grid-area: "top-l";
+  width: 100%;
+  text-align: center;
+}
+
+.head-left p {
+  color: rgb(82, 82, 82);
+  margin-bottom: 0%;
+  font-size: smaller;
+}
+
+.head-left h3 {
+  margin-top: 0%;
+}
+
+.head-mid {
+  grid-area: "top-m";
+  width: 100%;
+  text-align: center;
+}
+
+.head-mid p {
+  color: rgb(82, 82, 82);
+  margin-bottom: 0%;
+  font-size: smaller;
+}
+
+.head-mid h3 {
+  margin-top: 0%;
+}
+
+.head-right {
+  grid-area: "top-r";
+  width: 100%;
+  text-align: center;
+}
+
+.head-right p {
+  color: rgb(82, 82, 82);
+  margin-bottom: 0%;
+  font-size: smaller;
+}
+
+.head-right h3 {
+  margin-top: 0%;
+}
+
+.vertical-divider {
+  border-style: solid;
+  border-width: 2px;
+  border-left: none;
+  border-top: none;
+  border-bottom: none;
+  border-color: rgba(0, 0, 0, 0.164);
+}
+
+.description-cuttoff {
+  border-style: solid;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  border-color: rgba(0, 0, 0, 0.164);
+  padding: 1rem;
+  width: 95%;
+}
+
+.description-cuttoff p {
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 1%;
+  font-size: smaller;
+  color: rgb(82, 82, 82);
 }
